--- a/css/Pg-Erro404.css
+++ b/css/Pg-Erro404.css
@@ -8,7 +8,7 @@
 }
 
 body {
-    background-color:rgb(7, 6, 35);
+    background-color:rgb(1, 2, 1);
     overflow: hidden;
 }
 
@@ -29,7 +29,7 @@ nav{
     font-weight: bold;
     color: antiquewhite;
 }
-
+/*
 nav ul{
     display: flex;
     align-items: center;
@@ -37,22 +37,23 @@ nav ul{
 }
 
 nav ul li a {
-    color: #fff;
+    color: #f8f9f9;
     font-size: 1.2rem;
     border-bottom: 3px solid transparent;
-    transition: all 0.5s;
+    transition: all 0.5s;;
 }
- nav ul li a:hover{
-    border-bottom: 3px solid #357f8e;
-}
-
+nav ul li a:hover{
+    border-bottom: 3px solid #fff;
+}*/
+ 
 .main{
     overflow: hidden;
 }
 
-.section{
+.section {
     height: 100vh;
     padding: 8rem;
+
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -89,15 +90,35 @@ nav ul li a {
 }
 
 .right img{
-    width: 660px;
-    margin-bottom: 1rem;
+    width: 500px;
+    margin-bottom: -7rem;
     animation: float 1.8s infinite alternate;
 }
 
 .right .shadow{
     width: 450px;
-    height: 45px;
-    background: hsla(0, 100%, 100%,.1);
+    height: 60px;
+   /* background:hsla(85,85%,90%,85);*
     border-radius: 50%;
+    margin:0 auto;
+    filter: blur(5px);
+    animation: shadow 1.8s infinite alternate;*/
+}
+
+@keyframes float{
+    0%{
+        transform: translateY(0);
+    }
+    100%{
+        transform: translateY(1px);
+    }
+}/*
+@keyframes shadow{
+    0%{
+        transform: scale(1.1);
+    }
+    100%{
+        transform: scale(.95,.95);
+    }
 }
 
