--- a/css/style.css
+++ b/css/style.css
@@ -427,7 +427,7 @@ section.ajuda{
     padding: 40px 4%;
 }
 
-section.ajuda.flex {
+section.ajuda .flex {
     align-items: center;
     justify-content: center;
     gap: 90px;
@@ -435,7 +435,7 @@ section.ajuda.flex {
 
 .ajuda h2 {
     padding: 30px;
-    font-size: 25px;
+    font-size: 38px;
     color: #fff;
 }
 
@@ -458,15 +458,46 @@ section.ajuda.flex {
     color: #2cea68;
 }
 
+.ajuda i {
+    font-size: 35px;
+    display: flex;
+    margin-left: 10px;
+    color: #2cea68;
+}
+
+.ajuda ul li {
+    list-style-type: none;
+}
+
 /* ESTILO FOOTER */
 
 footer {
-    padding: 40px 4%;
+    padding: 30px 4%;
     background-color: #2cea68;
 }
 
-footer.flex {
-    align-items: center;
-    justify-content: center;
-    gap: 90px;
+footer .flex {
+    justify-content: space-between;
+}
+
+footer .logo-footer {
+    float: left;
+}
+
+footer .bnt-redes {
+    float: right;
+}
+
+footer i {
+    color: #fff;
+    font-size: 15px;
+}
+
+.footer-2 {
+    text-align: center;
+}
+
+.footer-2 a {
+    text-decoration: none;
+    color: #fff;
 }
