--- a/css/style.css
+++ b/css/style.css
@@ -30,8 +30,12 @@ span {
 
 .logo {
     float: left;
-    padding: 20px;
-   
+    padding: 20px;   
+}
+
+.logo img{
+    width: 150px;
+    height: 100px;
 }
 
 header {
@@ -65,7 +69,7 @@ header a:hover {
 }
 
 .menu-principal {
-    background-color: #2cea68;
+    background-color: #2ea754;
 }
 
 .link-menu {
