--- a/css/style.css
+++ b/css/style.css
@@ -29,12 +29,15 @@ span {
 /* ESTILO CABEÇALHO */
 
 header {
-    display: flex;
-    width: 100%;
-    padding: 20px;
     position: sticky;
-    top: 0px;
-    z-index: 1;
+    top: 0;
+    left: 0;
+    z-index: 7;
+    width: 100%;
+    height: 100px;
+    padding: 10px 90px;
+    box-sizing: border-box;
+    background: rgba(0,0,0,0.6);
 }
 
 header nav ul {
@@ -42,51 +45,44 @@ header nav ul {
 }
 
 header ul li {
-    margin-left: 20px;
+    margin-left: 40px;
     display: inline-block;
    
 }
 header ul li a {
     color: #fff;
     text-decoration: none;
-    font-size: 18px;
+    font-size: 15px;
     text-transform: uppercase;
 }
 
-header a:hover {
-    color: #073252;
-    transform: scale(1.05);
-}
-
-.menu-principal {
-    background-color: #43424200;
-}
-
-.logo {
-    float: left;
-    padding: 20px;  
+header ul li a:hover {
+    color: #38c1a0;
 }
 
 .logo img {
-    width: 250px;
-    height: 150px;
+    width: 120px;
+    height: 60px;
+    float: left;
+    position:absolute;
+    top: 20%;
 }
 
 .link-menu {
     position: absolute;
-    top: 45%;
+    top: 40%;
     left: 25%;
 }
 
 .login-topo {
     position: absolute;
-    top: 45%;
+    top: 40%;
     right: 20%;
 }
 
 .btn-topo {
     position: absolute;
-    top: 42%;
+    top: 30%;
     right: 3%;
 }
 
@@ -95,7 +91,7 @@ header a:hover {
     font-size: 15px;
     text-transform: uppercase;
     color: #fff;
-    background-color: #1a74b8;
+    background-color: #38c1a0;
     border: 0;
     border-radius: 30px;
     cursor: pointer;
@@ -103,20 +99,37 @@ header a:hover {
 }
 
 .btn-topo button:hover {
-    background-color: #38c1a0;
+    background-color: #1af5c2;
     transform: scale(1.05);
 }
 
 /* ESTILO TOPO-DO-SITE */
 
 section.topo-do-site{
-    padding: 40px 4%;
+    padding: 150px 4%;
 }
 
 section.topo-do-site.flex {
     align-items: center;
     justify-content: center;
     gap: 90px;
+}
+
+.topo-do-site video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    object-fit: cover;
+    width: 100%;
+    height: 750px;
+    background-color: #000;
+    opacity: 0.5;
+}
+
+.txt-topo-site {
+    padding-right: 400px;
+    position: relative;
+    z-index: 0;
 }
 
 .topo-do-site h1 {
@@ -135,10 +148,6 @@ section.topo-do-site.flex {
     left: 8%;
 }
 
-.txt-topo-site {
-    padding-right: 400px;
-}
-
 .bnt-txt button {
     padding: 10px 20px;
     font-size: 14px;
@@ -153,7 +162,7 @@ section.topo-do-site.flex {
 }
 
 .bnt-txt button:hover {
-    background-color: #073252;
+    background-color: #2e71c6;
     transform: scale(1.05);
 }
 
@@ -169,20 +178,18 @@ section.topo-do-site.flex {
 
 section.txt-2 {
     padding: 40px 4%;
+    padding-top: 100px;
 }
 
 section.txt-2 .flex {
     align-items: center;
     justify-content: center;
-    gap: 60px;
-    justify-content: center;
 }
-
 
 .txt-2 h1 {
     color: #38c1a0;
     font-size: 45px;
-    padding-bottom: 70px;
+    padding-bottom: 40px;
     text-align: center;
 }
 
@@ -193,11 +200,12 @@ section.txt-2 .flex {
     font-size: 15px;
     border-radius: 20px;
     padding: 30px;
+    margin: 20px;
 }
 
-.txt-2 .txt-box {
+.txt-2 .txt-box:hover {
     transform: scale(1.05);
-    box-shadow: 0 0 30px #073252;
+    box-shadow: 0 0 30px #2e71c6;
 }
 
 .txt-2 .txt-box h3 {
@@ -214,7 +222,6 @@ section.txt-2 .flex {
     color: #38c1a0;
 }
 
-
 /* ESTILO SECTION ENCONTRE */
 
 section.encontre {
@@ -227,36 +234,38 @@ section.encontre .flex {
     gap: 70px;
 }
 
-.encontre .serv-box {
+.serv-box button {
     margin-top: 15px;
     border-radius: 20px;
     padding: 100px;
     transition: .2s;
-    background-color: #073252;
+    background-color: #2e71c6;
     text-align: center;
     height: 350px;
     width: 400px;
     display: inline-block;
+    border: 0;
+    cursor: pointer;
 }
 
-.encontre .serv-box:hover {
+.serv-box button:hover {
     transform: scale(1.05);
-    box-shadow: 0 0 30px #073252;
+    box-shadow: 0 0 30px #2e71c6;
 }
 
-.serv-box i {
+.serv-box button i {
     display: flex;
     font-size: 40px;
     margin-bottom: 20px;
     justify-content: center;
 }
 
-.serv-box p {
+.serv-box button p {
     font-size: 14px;
     margin-bottom: 15px;
 }
 
-.serv-box h3 {
+.serv-box button h3 {
     font-size: 28px;
     justify-content: center;
     align-items: center;
@@ -296,21 +305,16 @@ section.depoimentos{
     padding: 40px 4%;
 }
 
-section.depoimentos.flex {
+section.depoimentos .flex {
     align-items: center;
     justify-content: center;
+    text-align: center;
 }
 
 section.depoimentos .depoimentos-box img {
     width: 100px;
     height: 100px;
     border-radius: 50%;
-}
-
-.depoimentos {
-    align-items: center;
-    text-align: center;
-    align-items: center;
 }
 
 .depoimentos h2 {
@@ -338,7 +342,7 @@ section.depoimentos .depoimentos-box img {
 
 .depoimentos-box img:hover {
     transform: scale(1.05);
-    box-shadow: 0 0 30px #073252;
+    box-shadow: 0 0 30px #2e71c6;
 }
 
 /* ESTILO PLANOS */
@@ -399,7 +403,7 @@ section.planos .flex {
     padding: 10px 20px;
     font-size: 14px;
     text-transform: uppercase;
-    background-color: #1a74b8;
+    background-color: #38c1a0;
     border: 0;
     border-radius: 30px;
     cursor: pointer;
@@ -407,7 +411,7 @@ section.planos .flex {
 }
 
 .bnt-planos button:hover {
-    background-color: #38c1a0;
+    background-color: #1af5c2;
     transform: scale(1.05);
 }
 
@@ -416,12 +420,12 @@ section.planos .flex {
     border-radius: 20px;
     padding: 20px;
     transition: .2s;
-    background-color: #073252;
+    background-color: #2e71c6;
 }
 
 .planos .p-planos:hover {
     transform: scale(1.05);
-    box-shadow: 0 0 30px #073252;
+    box-shadow: 0 0 30px #2e71c6;
 }
 
 /* ESTILO PRECISO DE AJUDA */
