--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,13 @@ body {
 }
 
 span {
-    color: #1a74b8;
+    color: #2e71c6;
+}
+
+/* EFEITO SCROOLREVEAL*/
+
+.efeito-txt-topo, .efeito-titulo, .efeito-box-1, .efeito-box-2, .efeito-box-3, .efeito-box-4, .efeito-serv-1, .efeito-serv-2, .efeito-quem-somos, .efeito-depoimentos-1, .efeito-depoimentos-2, .efeito-depoimentos-3, .efeito-depoimentos-4, .efeito-depoimentos-5, .efeito-planos, .efeito-ajuda{
+    visibility: hidden;
 }
 
 /* ESTILO CABEÇALHO */
@@ -90,16 +96,16 @@ header ul li a:hover {
     padding: 10px 20px;
     font-size: 15px;
     text-transform: uppercase;
-    color: #fff;
-    background-color: #38c1a0;
-    border: 0;
-    border-radius: 30px;
+    background: transparent;
+    border: 2px solid #38c1a0;
+    color: #38c1a0;
     cursor: pointer;
-    transition: .2s;
+    transition: all 0.2s ease-in-out;
 }
 
 .btn-topo button:hover {
-    background-color: #1af5c2;
+    box-shadow: 0 0 15px #38c1a0, inset 0 0 15px #38c1a0;
+    text-shadow: 0 0 15px #38c1a0;
     transform: scale(1.05);
 }
 
@@ -109,7 +115,7 @@ section.topo-do-site{
     padding: 150px 4%;
 }
 
-section.topo-do-site.flex {
+section.topo-do-site .flex {
     align-items: center;
     justify-content: center;
     gap: 90px;
@@ -121,9 +127,9 @@ section.topo-do-site.flex {
     left: 0;
     object-fit: cover;
     width: 100%;
-    height: 750px;
+    height: 700px;
     background-color: #000;
-    opacity: 0.5;
+    opacity: 0.3;
 }
 
 .txt-topo-site {
@@ -136,54 +142,75 @@ section.topo-do-site.flex {
     color: #38c1a0;
     font-size: 57px;
     line-height: 40px;
-    padding-bottom: 30px;
+    padding-bottom: 20px;
+    line-height: 50px;
 }
 
 .topo-do-site .txt-topo-site ul li {
     font-size: 17px;
     text-align: justify;
-    margin: 10px 0px;
-    margin-right: 20px;
+    margin: 5px 0px;
     position: relative;
     left: 8%;
+    list-style-type: none;
 }
 
-.bnt-txt button {
+.topo-do-site i {
+    color: #2e71c6;
+    margin-right: 10px;
+    font-size: 18px;
+}
+
+.btn-txt {
+    display: flex;
+    gap: 20px;
+    margin-top: 20px;
+}
+
+.btn-txt-1 button {
     padding: 10px 20px;
-    font-size: 14px;
+    font-size: 15px;
     text-transform: uppercase;
-    color: #fff;
-    border: 0;
-    border-radius: 30px;
+    background: transparent;
+    border: 2px solid #38c1a0;
+    color: #38c1a0;
     cursor: pointer;
-    transition: .2s;
-    margin-top: 1%;
-    margin-left: 2%;
+    transition: all 0.2s ease-in-out;
 }
 
-.bnt-txt button:hover {
-    background-color: #2e71c6;
+.btn-txt-1 button:hover {
+    box-shadow: 0 0 15px #38c1a0, inset 0 0 15px #38c1a0;
+    text-shadow: 0 0 15px #38c1a0;
     transform: scale(1.05);
 }
 
-.bnt-txt .bnt-txt-1 {
-    background-color: #1a74b8;
+.btn-txt-2 button {
+    padding: 10px 20px;
+    font-size: 15px;
+    text-transform: uppercase;
+    background: transparent;
+    border: 2px solid #2e71c6;
+    color: #2e71c6;
+    cursor: pointer;
+    transition: all 0.2s ease-in-out;
 }
 
-.bnt-txt .bnt-txt-2 {
-    background-color: #38c1a0;
+.btn-txt-2 button:hover {
+    box-shadow: 0 0 15px #2e71c6, inset 0 0 15px #2e71c6;
+    text-shadow: 0 0 15px #2e71c6;
+    transform: scale(1.05);
 }
 
 /* ESTILO SECTION TXT-2 */
 
 section.txt-2 {
     padding: 40px 4%;
-    padding-top: 100px;
+    padding-top: 50px;
 }
 
 section.txt-2 .flex {
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
 }
 
 .txt-2 h1 {
@@ -198,14 +225,13 @@ section.txt-2 .flex {
     width: 245px;
     align-items: center;
     font-size: 15px;
-    border-radius: 20px;
     padding: 30px;
     margin: 20px;
 }
 
 .txt-2 .txt-box:hover {
     transform: scale(1.05);
-    box-shadow: 0 0 30px #2e71c6;
+    box-shadow: 0 0 30px #38c1a0;
 }
 
 .txt-2 .txt-box h3 {
@@ -225,7 +251,8 @@ section.txt-2 .flex {
 /* ESTILO SECTION ENCONTRE */
 
 section.encontre {
-    padding: 70px 4%;
+    padding: 40px 4%;
+    padding-bottom: 150px;
 }
 
 section.encontre .flex {
@@ -236,39 +263,42 @@ section.encontre .flex {
 
 .serv-box button {
     margin-top: 15px;
-    border-radius: 20px;
     padding: 100px;
     transition: .2s;
-    background-color: #2e71c6;
+    background-color: #5d5d5d21;
     text-align: center;
     height: 350px;
     width: 400px;
     display: inline-block;
     border: 0;
     cursor: pointer;
+    border: 2px solid #38c1a0;
 }
 
 .serv-box button:hover {
     transform: scale(1.05);
-    box-shadow: 0 0 30px #2e71c6;
+    box-shadow: 0 0 30px #38c1a0;
 }
 
-.serv-box button i {
+.serv-box i {
     display: flex;
     font-size: 40px;
     margin-bottom: 20px;
     justify-content: center;
+    color: #38c1a0;
 }
 
-.serv-box button p {
+.serv-box p {
     font-size: 14px;
     margin-bottom: 15px;
+    color: #fff;
 }
 
-.serv-box button h3 {
+.serv-box h3 {
     font-size: 28px;
     justify-content: center;
     align-items: center;
+    color: #fff;
 }
 
 /* ESTILO QUEM SOMOS */
@@ -289,13 +319,13 @@ section.txt-3 .flex {
     padding-right: 200px;
 }
 
-.txt-3 .txt-quem-somos h2 {
+.txt-3 .txt-quem-somos h1 {
     font-size: 60px;
-    line-height: 40px;
+    line-height: 53px;
 }
 
 .txt-3 .quem-somos p {
-    font-size: 25x;
+    font-size: 18px;
     text-align: justify;
 }
 
@@ -317,17 +347,17 @@ section.depoimentos .depoimentos-box img {
     border-radius: 50%;
 }
 
+.depoimentos .depoimentos-box {
+    margin-top: 15px;
+    border-radius: 20px;
+    padding: 30px;
+}
+
 .depoimentos h2 {
     padding-top: 40px;
     color: #38c1a0;
     font-size: 45px;
     padding-bottom: 30px;
-}
-
-.depoimentos .depoimentos-box {
-    margin-top: 15px;
-    border-radius: 20px;
-    padding: 30px;
 }
 
 .depoimentos h4 {
@@ -340,9 +370,8 @@ section.depoimentos .depoimentos-box img {
     font-size: 12px;
 }
 
-.depoimentos-box img:hover {
-    transform: scale(1.05);
-    box-shadow: 0 0 30px #2e71c6;
+.depoimentos-box img {
+    box-shadow: 0 0 20px #38c1a0;
 }
 
 /* ESTILO PLANOS */
@@ -353,116 +382,98 @@ section.planos{
 
 section.planos .flex {
     align-items: center;
-    justify-content: center;
-    gap: 110px;
+    justify-content: space-around;
 }
 
 .planos .p-planos {
-    width: 450px;
-    height: 550px;
+    padding: 50px;
+    transition: .2s;
+    margin-top: 60px;
+    background-color: #5d5d5d21;
+    border: 2px solid #38c1a0;
 }
 
-.planos h2 {
+.planos h1 {
+    padding: 20px;
     color: #38c1a0;
-    font-size: 35px;
+    font-size: 38px;
     text-align: center;
 }
 
-.planos p {
-    font-size: 13px;
+.planos p { 
+    font-size: 15px;
     text-align: center;
-    margin-top: 10px;
-    margin-bottom: 40px;
 }
 
 .planos h3 {
-    font-size: 25px;
+    font-size: 35px;
     text-align: center;
+    text-transform: uppercase;
+    color: #2e71c6
 }
 
 .planos h4 {
-    font-size: 40px;
+    font-size: 75px;
     padding: 20px;
     text-align: center;
+    text-shadow: 0 0 15px #38c1a0;
 }
 
 .planos ul li {
-    margin-left: 40px;
-    font-size: 13px;
-    padding: 3px;
+    list-style-type: none;
+    font-size: 16px;
 }
 
-.planos .bnt-planos {
+.planos i {
+    font-size: 18px;
+    margin-right: 20px;
+    color: #2e71c6;
+}
+
+.planos .btn-planos {
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 25px;
 }
 
-.planos .bnt-planos button {
+.planos .btn-planos button {
     padding: 10px 20px;
     font-size: 14px;
     text-transform: uppercase;
-    background-color: #38c1a0;
-    border: 0;
-    border-radius: 30px;
+    background: transparent;
+    border: 2px solid #38c1a0;
+    color: #38c1a0;
     cursor: pointer;
-    transition: .2s;
+    transition: all 0.2s ease-in-out;
 }
 
-.bnt-planos button:hover {
-    background-color: #1af5c2;
+.btn-planos button:hover {
+    box-shadow: 0 0 15px #38c1a0, inset 0 0 15px #38c1a0;
+    text-shadow: 0 0 15px #38c1a0;
     transform: scale(1.05);
 }
 
 .planos .p-planos {
-    margin-top: 15px;
-    border-radius: 20px;
-    padding: 20px;
-    transition: .2s;
-    background-color: #2e71c6;
-}
-
-.planos .p-planos:hover {
-    transform: scale(1.05);
-    box-shadow: 0 0 30px #2e71c6;
+    box-shadow: 0 0 10px #38c1a0;
 }
 
 /* ESTILO PRECISO DE AJUDA */
 
 section.ajuda{
     padding: 40px 4%;
+    padding-bottom: 80px;
 }
 
 section.ajuda .flex {
     align-items: center;
-    justify-content: center;
-    gap: 90px;
+    justify-content: space-around;
 }
 
-.ajuda h2 {
-    padding: 30px;
+.ajuda h1 {
+    padding: 40px;
     font-size: 38px;
     color: #fff;
-}
-
-.ajuda h3 {
-    font-size: 23px;
-    padding: 10px;
-}
-
-.ajuda p  {
-    font-size: 13px;
-    padding: 10px;
-}
-
-.ajuda a {
-    font-size: 14px;
-    color: #fff;
-}
-
-.ajuda a:hover {
-    color: #38c1a0;
 }
 
 .ajuda i {
@@ -472,7 +483,27 @@ section.ajuda .flex {
     color: #38c1a0;
 }
 
-.ajuda ul li {
+.ajuda h3 {
+    font-size: 30px;
+    padding: 10px;
+}
+
+.ajuda p  {
+    font-size: 16px;
+    padding: 10px;
+}
+
+.ajuda a {
+    font-size: 15px;
+    color: #fff;
+    text-decoration: none;
+}
+
+.ajuda a:hover {
+    color: #38c1a0;
+}
+
+.ajuda ul li{
     list-style-type: none;
 }
 
@@ -491,13 +522,14 @@ footer .logo-footer {
     float: left;
 }
 
-footer .bnt-redes {
+footer .btn-redes {
     float: right;
 }
 
-footer i {
+.footer-1 i {
     color: #fff;
-    font-size: 15px;
+    font-size: 25px;
+    
 }
 
 .footer-2 {
@@ -507,4 +539,10 @@ footer i {
 .footer-2 a {
     text-decoration: none;
     color: #fff;
+}
+
+.logo-footer img {
+    width: 120px;
+    height: 60px;
+    float: left;
 }
