--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ body {
     height: 100vg;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: #fff;
+    transition: .5s
 }
 
 .interface {
@@ -30,6 +31,68 @@ span {
 
 .efeito-txt-topo, .efeito-titulo, .efeito-box-1, .efeito-box-2, .efeito-box-3, .efeito-box-4, .efeito-serv-1, .efeito-serv-2, .efeito-quem-somos, .efeito-depoimentos-1, .efeito-depoimentos-2, .efeito-depoimentos-3, .efeito-depoimentos-4, .efeito-depoimentos-5, .efeito-planos, .efeito-ajuda{
     visibility: hidden;
+}
+
+/* ACESSIBILIDADE */
+
+.trilho {
+    width: 350px;
+    height: 150px;
+    background-color: #2f2f2f;
+    border-radius: 150px;
+    position: relative;
+    cursor: pointer;
+}
+
+.trilho .indicador {
+    width: 150px;
+    height: 150px;
+    background-color: #000000;
+    border-radius: 50%;
+    transform: scale(.9);
+    position: absolute;
+    left: 0;
+    transition: .5s;
+}
+
+.trilho.dark {
+    background-color: #c8c8c8;
+}
+
+.trilho.dark .indicador {
+    left: 200px;
+    background-color: #fff;
+}
+
+body.dark {
+    background-color: #e3e3e3;
+}
+
+body.dark .txt-3,
+body.dark footer {
+    background-color: #2e71c6;
+}
+
+body.dark h1,
+body.dark i {
+    color: #2e71c6;
+}
+
+body.dark h3,
+body.dark h4,
+body.dark p,
+body.dark ul li, 
+body.dark a {
+    color: #000;
+}
+
+body.dark span {
+    color: #38c1a0;
+}
+
+body.dark footer *,
+body.dark .txt-3 * {
+    color: #fff;
 }
 
 /* ESTILO CABEÇALHO */
@@ -473,7 +536,7 @@ section.ajuda .flex {
 .ajuda h1 {
     padding: 40px;
     font-size: 38px;
-    color: #fff;
+    color: #38c1a0;
 }
 
 .ajuda i {
@@ -518,18 +581,10 @@ footer .flex {
     justify-content: space-between;
 }
 
-footer .logo-footer {
-    float: left;
-}
-
-footer .btn-redes {
-    float: right;
-}
-
 .footer-1 i {
     color: #fff;
     font-size: 25px;
-    
+    margin-left: 10px;
 }
 
 .footer-2 {
