--- a/css/stylequemsomos.css
+++ b/css/stylequemsomos.css
@@ -1,185 +1,571 @@
+/* ESTILO DA PÁGINA */
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;   
-  }
-  
-  body {
-    background-color: #2b3a42;
-    color: #e0e0e0; 
-    height: 100vg;
+}
+
+body {
+    background-color: #000;
+    height: 100vh;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  }
-  
-  main {
-  
-  }
-  
-  .interface {
-    margin: 1280px;
+    color: #fff;
+    transition: .5s
+}
+
+.interface {
+    margin: 1080px;
     margin: 0;
-  }
-  
-  .flex {
+}
+
+.flex {
     display: flex;
-  }
-  
-  span {
-    color: #1a74b8;
-  }
-  
-  /* ESTILO CABEÇALHO */
-  
-    header {
-      position: sticky;
-      top: 0;
-      left: 0;
-      z-index: 7;
-      width: 100%;
-      height: 100px;
-      padding: 10px 90px;
-      box-sizing: border-box;
-      background: rgba(0,0,0,0.6);
-      
-  }
-  
-  header nav ul {
-      list-style-type: none;
-  }
-  
-  header ul li {
-      margin-left: 40px;
-      display: inline-block;
-     
-  }
-  header ul li a {
-      color: #fff;
-      text-decoration: none;
-      font-size: 15px;
-      text-transform: uppercase;
-  }
-  
-  header ul li a:hover {
-      color: #38c1a0;
-  }
-  
-  .logo img {
-      width: 120px;
-      height: 60px;
-      float: left;
-      position:absolute;
-      top: 20%;
-  }
-  
-  .link-menu {
-      position: absolute;
-      top: 40%;
-      left: 25%;
-  }
-  
-  .login-topo {
-      position: absolute;
-      top: 40%;
-      right: 20%;
-  }
-  
-  
-  .btn-topo {
-      position: absolute;
-      top: 30%;
-      right: 3%;
-  }
-  
-  .btn-topo button {
-      padding: 10px 20px;
-      font-size: 15px;
-      text-transform: uppercase;
-      color: #fff;
-      background-color: #38c1a0;
-      border: 0;
-      border-radius: 30px;
-      cursor: pointer;
-      transition: .2s;
-  }
-  
-  .btn-topo button:hover {
-      background-color: #1af5c2;
-      transform: scale(1.05);
-  }
-  
-  /* ESTILO TOPO-DO-SITE */
-  
-    .quemsomos {
-      margin-left: 20px;
-      margin-top: 20px;
-      display: flex;
-      
-    }
-    .grad1 {
-      -webkit-mask-image: 
-          linear-gradient(to left, transparent 5%, black 75%);
-      mask-image: none   
-          linear-gradient(to left, transparent 5%, black 75%);
-      -webkit-mask-repeat: 
-          no-repeat;  
-      mask-repeat:
-          no-repeat;  
-    }
-    .grad2 {
-      -webkit-mask-image: 
-          linear-gradient(to right, transparent 5%, black 75%);
-      mask-image: none   
-          linear-gradient(to right, transparent 5%, black 75%);
-      -webkit-mask-repeat: 
-          no-repeat;  
-      mask-repeat:
-          no-repeat;  
-    }
-    .grad3 {
-      -webkit-mask-image: 
-          linear-gradient(to left, transparent 5%, black 75%);
-      mask-image: none   
-          linear-gradient(to left, transparent 5%, black 75%);
-      -webkit-mask-repeat: 
-          no-repeat;  
-      mask-repeat:
-          no-repeat;  
-    }
-  
-    p {
-      font-family: Arial, Helvetica, sans-serif;
-      font-size: 50px;
-    }
-  
-    footer {
-        padding: 5px 4%;
-        background-color: #38c1a0;
-    }
-    
-    footer .flex {
-        justify-content: space-between;
-    }
-    
-    .footer-1 i {
-        color: #fff;
-        font-size: 25px;
-        margin-left: 10px;
-    }
-    
-    .footer-2 {
-        text-align: center;
-        font-size: 10px;
-    }
-    
-    .footer-2 a {
-        text-decoration: none;
-        color: #fff;
-    }
-    
-    .logo-footer img {
-        width: 120px;
-        height: 60px;
-        float: left;
+}
+
+span {
+    color: #2e71c6;
+}
+
+button {
+    padding: 10px 20px;
+    font-size: 15px;
+    text-transform: uppercase;
+    background: transparent;
+    border: 2px solid #38c1a0;
+    color: #38c1a0;
+    cursor: pointer;
+    transition: all 0.2s ease-in-out;
+}
+
+button:hover {
+    box-shadow: 0 0 15px #38c1a0, inset 0 0 15px #38c1a0;
+    text-shadow: 0 0 15px #38c1a0;
+    transform: scale(1.05);
+}
+
+/* ACESSIBILIDADE */
+
+    /* BOTÃO DA ACESSIBILIDADE */
+
+.fixo {
+    position: fixed;
+    bottom: 10px;
+    right: 5px;
+    padding: 10px 15px;
+    background-color: transparent;
+    border: none !important;
+    border-radius: 50%;
+    cursor: pointer;
+    font-size: 24px;
+    z-index: 1000;
+}
+
+.fixo:hover {
+    box-shadow: 0 0 0 !important;
+}
+
+.fixo i {
+    color: #fff;
+}
+
+.acessibilidade {
+    text-align: center;
+    display: none;
+    position: fixed;
+    bottom: 80px;
+    right: 10px;
+    background-color: #fff;
+    padding: 15px;
+    border-radius: 8px;
+    z-index: 1000;
+}
+
+.acessibilidade.ativo {
+    display: block;
+}
+
+.acess {
+    text-transform: uppercase;
+    color: #000;
+}
+
+.modo-escuro {
+    top: 6px;
+    margin: 12px 0;
+}
+
+    /* AUMENTAR E DIMINUIR FONTE */
+
+.maior-menor button {
+    padding: 3px 3px;
+    margin-left: 4px;
+}
+
+    /* CLARO E ESCURO */
+
+.trilho {
+    width: 60px;
+    height: 30px;
+    background-color: #818181;
+    border-radius: 150px;
+    position: relative;
+    cursor: pointer;
+}
+
+.trilho .indicador {
+    width: 30px;
+    height: 30px;
+    background-color: #000000;
+    border-radius: 50%;
+    transform: scale(.9);
+    position: absolute;
+    left: 0;
+    transition: .5s;
+}
+
+.trilho.dark {
+    background-color: #a9a9a9;
+}
+
+.trilho.dark .indicador {
+    left: 30px;
+    background-color: #fff;
+}
+
+body.dark .txt-2,
+body.dark .encontre,
+body.dark .depoimentos,
+body.dark .planos,
+body.dark .ajuda {
+    background-color: #d5d4d4;
+}
+
+body.dark .txt-3,
+body.dark footer {
+    background-color: #2e71c6;
+}
+
+body.dark header ul li a,
+body.dark .topo-do-site ul li,
+body.dark .txt-3 *,
+body.dark footer *,
+body.dark footer i,
+body.dark .fixo i,
+body.dark .menu-mobile .btn-login i {
+    color: #fff !important;
+}
+
+body.dark h1,
+body.dark i,
+body.dark i,
+body.dark ul li a:hover {
+    color: #2e71c6 !important; 
+}
+
+body.dark h3,
+body.dark h4,
+body.dark p,
+body.dark ul li, 
+body.dark a {
+    color: #000;
+}
+
+body.dark span,
+body.dark .planos h3,
+body.dark .txt-topo-site i,
+body.dark .p-planos i {
+    color: #38c1a0 !important;
+}
+
+body.dark button {
+    border: 2px solid #2e71c6;
+    color: #2e71c6; 
+}
+
+body.dark button:hover {
+    box-shadow: 0 0 15px #2e71c6, inset 0 0 15px #2e71c6;
+    text-shadow: 0 0 15px #2e71c6; 
+}
+
+body.dark .btn-txt-2 button {
+    border: 2px solid #38c1a0;
+    color: #38c1a0;
+}
+
+body.dark .btn-txt-2 button:hover {
+    box-shadow: 0 0 15px #38c1a0, inset 0 0 15px #38c1a0;
+    text-shadow: 0 0 15px #38c1a0;
+}
+
+body.dark .p-planos,
+body.dark .txt-box,
+body.dark .depoimentos-box img {
+    box-shadow: 0 0 10px #2e71c6;
+    border: 2px solid #2e71c6;
+}
+ 
+body.dark .txt-box:hover {
+    box-shadow: 0 0 30px #2e71c6;
+}
+
+body.dark .menu-mobile nav ul li a:hover {
+    background-color: #2e71c6;
+}
+
+
+body.dark .menu-desktop a:hover, .login-topo a:hover {
+    box-shadow: -1px 2px 2px #2e71c6;
+    color: #2e71c6;
+}
+
+body.dark .dropdown:hover .dropdown-menu {
+    box-shadow: 1px 2px 2px #2e71c6;
+}
+
+body.dark .menu-mobile .btn-login {
+    background-color: #2e71c6;
+}
+
+body.dark .menu-mobile .btn-login:hover {
+    box-shadow: 0 0 15px #2e71c6;
+}
+/* ESTILO CABEÇALHO */
+
+header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 7;
+    width: 100%;
+    height: 100px;
+    padding: 10px 90px;
+    box-sizing: border-box;
+    background: rgba(0,0,0,0.6);
+    z-index:1000;
+}
+
+header nav.menu-desktop ul {
+    list-style-type: none;
+}
+
+header nav.menu-desktop ul li {
+    margin-left: 25px;
+    display: inline-block;
+}
+
+header nav.menu-desktop ul li a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 18px;
+    text-transform: uppercase;
+    padding: 15px;
+}
+
+.menu-desktop a:hover, .login-topo a:hover {
+    box-shadow: -1px 2px 2px #38c1a0;
+    color: #38c1a0;
+}
+
+.dropdown-menu {
+    position: absolute;
+    display: none;
+    min-width: 150px;
+}
+
+.dropdown-menu a {
+    display: block;
+}
+
+.dropdown:hover .dropdown-menu {
+    display: block;
+    box-shadow: 1px 2px 2px #38c1a0;
+    background-color: #000000a9;
+    margin-bottom: 20px;
+    margin-top: 15px;
+}
+
+.dropdown i {
+    font-size: 20px;
+    margin: 0 0 0 2px;
+}
+
+.container {
+    position: relative;
+}
+
+.legenda,
+.legenda2,
+.legenda3 {
+    width: 65%;
+    height: 25%;
+    z-index: 50;
+    background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
+    backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(5px);
+    border-radius: 18px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
+    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
+    transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+.legenda {
+    bottom: 580px;
+    left: 350px;
+    position: absolute;
+}
+
+.legenda2 {
+    bottom: 300px;
+    left: 350px;
+    position: absolute;
+}
+
+.legenda3 {
+    bottom: 20px;
+    left: 350px;
+    position: absolute;
+}
+
+.legenda:after, .legenda2:after, .legenda3:after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+    z-index: -1;
+}
+
+.legenda:hover,
+.legenda2:hover,
+.legenda3:hover {
+    transform: scale(1.10, 1.10);
+}
+
+.legenda::after,
+.legenda2::after,
+.legenda3:after {
+    opacity: 1;
+}
+
+.legenda3:after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 0;
+    opacity: 0;
+    transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+    z-index: -1;
+}
+
+h1 {
+    font-family: sans-serif;
+    color: #1af5c2;
+    margin-top: 20px;
+    margin-left: 10px;
+} 
+
+/* POSIÇÃO DO MENU */
+
+.logo img {
+    width: 120px;
+    height: 60px;
+    position: absolute;
+    top: 18%;
+    left: 4%;
+}
+
+.menu-desktop {
+    position: absolute;
+    float: left;
+    top: 40%;
+    left: 15%;
+}
+
+.login-topo {
+    position: absolute;
+    left: 140%;
+}
+
+.btn-topo {
+    position: absolute;
+    top: 30%;
+    right: 2%;
+}
+
+/* ESTILO TOPO-DO-SITE */
+
+.topo-do-site video {
+    top: 0;
+    left: 0;
+    width: 
+}
+
+/* ESTILO FOOTER */
+
+footer {
+    position:static;
+    margin: -3.8px;
+    padding: 40px 4%;
+    background-color: #38c1a0;
+    width: 1924px;
+}
+footer .flex {
+    justify-content: space-between;
+}
+
+.footer-1 i {
+    color: #fff;
+    font-size: 25px;
+    margin-left: 10px;
+}
+
+.footer-2 {
+    text-align: center;
+}
+
+.footer-2 i {
+    font-size: 15px;
+    color: #fff;
+}
+
+.footer-2 a {
+    text-decoration: none;
+}
+
+
+/* ESTILO MENU MOBILE */
+
+.btn-abrir-menu {
+    display: none;
+}
+
+.btn-abrir-menu i {
+    position: fixed;
+    top: 4%;
+    right: 5%;
+}
+
+.menu-mobile {
+    background-color: #000000cb;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 99999;
+    width: 0%;
+    overflow: hidden;
+    transition: .2s;
+}
+
+.menu-mobile.abrir-menu {
+    width: 70%;
+}
+
+.menu-mobile.abrir-menu ~ .overlay-menu{
+    display: block;
+}
+
+.menu-mobile .btn-fechar {
+    padding: 20px 5%;
+}
+
+.menu-mobile .btn-fechar i {
+    color: #38c1a0;
+    font-size: 30px;
+}
+
+.menu-mobile nav ul {
+    text-align: right;
+}
+
+.menu-mobile nav ul li a {
+    color: #fff;
+    font-size: 20px;
+    font-weight: 300;
+    padding: 20px 8%;
+    display: block;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
+.menu-mobile nav ul li a:hover {
+    background-color: #38c1a0;
+    color: #000 !important;
+}
+
+.menu-mobile .btn-login {
+    background-color: #38c1a0;
+    font-size: 15px;
+    text-decoration: underline;
+    text-align: left;
+}
+
+.menu-mobile .btn-login i {
+    color: #fff;
+    margin-right: 20px;
+}
+
+.menu-mobile .btn-login:hover {
+    box-shadow: 0 0 15px #38c1a0;
+}
+
+.overlay-menu {
+    background-color: #000000a9;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 88888;
+    display: none;
+}
+
+/* RESPONSIVIDADE */
+
+@media screen and (max-width: 1020px){
+    /* CLASSES GERAIS */
+    .flex{
+        flex-direction: column;
     }
 
-    .bi
+    /* MENU */
+    .menu-desktop, .btn-topo {
+        display: none;
+    }    
+
+    .btn-abrir-menu {
+        display: block;
+    }
+
+    h1 {
+        font-size: 45px;
+    }
+
+    /* TOPO DO SITE */
+
+    section.topo-do-site{
+    padding: 60px 6%;
+    }
+
+    .txt-topo-site {
+        padding-right: 20px;
+    }
+    
+    .topo-do-site h1 {
+        text-align: center;
+        font-size: 30px;
+        line-height: 30px;
+    }
+
+    /* FOOTER */
+
+    footer {
+        padding: 40px 8%;
+    }
+
+    .footer-2 {
+        margin-top: 15px;
+    }
+}
