--- a/css/style-Admin.css
+++ b/css/style-Admin.css
@@ -120,7 +120,7 @@ body{
       left: 0;
       z-index: 7;
       width: 100%;
-      height: 100px;
+      height: 50px;
       padding: 10px 90px;
       box-sizing: border-box;
       background: rgba(0,0,0,0.6);
@@ -146,31 +146,9 @@ body{
   }
   
   .logo img {
-      width: 120px;
-      height: 60px;
-      position: absolute;
-      top: 18%;
-      left: 4%;
+      width: 130px;
+      height: 65px;
   
-  }
-  
-  .menu-desktop {
-      position: absolute;
-      float: left;
-      top: 40%;
-      left: 15%;
-  }
-  
-  .login-topo {
-      position: absolute;
-      top: 40%;
-      right: 32%;
-  }
-  
-  .btn-topo {
-      position: absolute;
-      top: 30%;
-      right: 15%;
   }
   
   .modo-escuro {
@@ -225,8 +203,9 @@ body{
   }
   
   .btn-expandir {
-    width: 100%;
-    padding-left: 10px;
+    width: 90%;
+    padding-left: 13px;
+    padding-top: 10px;
   }
   
   .btn-expandir > i {
@@ -284,13 +263,14 @@ body{
   /* Dashboard - Caixas de informação */
   .dashboard {
     display: grid;
-    grid-template-columns: 2fr 1fr 1fr;
-    grid-template-rows: auto auto;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto;
     gap: 15px;
-    padding: 15px;
-    margin: 2%;
-    width: calc(100% - 80px); /* Ajuste para não ultrapassar o menu */
-    transition: width 0.3s;
+    padding: 8px;
+    padding-top: 11px;
+    margin: 1%;
+    width: calc(100% - 70px); /* Ajuste para não ultrapassar o menu */
+    transition: width 0.2s;
   }
   
   nav.menu-lateral:hover ~ .dashboard {
@@ -300,8 +280,8 @@ body{
   .panel {
     background: #2c2c34;
     border-radius: 10px;
-    padding: 10px;
-    min-height: 200px;
+    padding: 50px;
+    height: 350px;
     box-shadow: 0 5px 15px rgba(57, 78, 146, 0.852);
     border: 1px solid rgba(255, 255, 255, 0.1);
     transition: transform 0.3s, box-shadow 0.3s;
@@ -312,9 +292,14 @@ body{
     box-shadow: 0 10px 30px rgba(59, 105, 203, 0.707);
   }
   
+
+
   .panel.large {
     grid-column: 1 / 3;
-    grid-row: 2;
+    grid-row: 1;
+    padding: 9%;
+    gap: 50px;
+    
   }
   
   .panel.medium:nth-child(2) {
@@ -324,12 +309,12 @@ body{
   
   .panel.medium:nth-child(3) {
     grid-column: 1 / 1;
-    grid-row: 1;
+    grid-row: 2;
   }
   
   .panel.medium:nth-child(4) {
     grid-column: 2 / 3;
-    grid-row: 1;
+    grid-row: 2;
   }
   
   .panel.small {
@@ -390,7 +375,7 @@ body{
   
     .dashboard {
       grid-template-columns: 1fr;
-      width: 90%;
+      width: 50%;
     }
   
     .panel {
@@ -398,7 +383,7 @@ body{
     }
   }
   
-  @media (max-width: 410px) {
+  @media (max-width: 1020px) {
     .dashboard {
       width: 100;
       padding: 10px;
