--- a/css/style.css
+++ b/css/style.css
@@ -349,7 +349,7 @@ header nav.menu-desktop ul li a {
 
 .login-topo {
     position: absolute;
-    left: 140%;
+    right: -105%;
 }
 
 .btn-topo {
